:wrench: chore: 도커 세팅 추가 및 서버 세팅 설정
 - 각 폴더에 도커 설정 추가
 - docker-compose.db.yml와 docker-compose.full.yml를 추가함
 - `docker-compose.db.yml`: MariaDB만 실행할 수 있는 Docker Compose 설정 추가
 - `docker-compose.full.yml`: DB, 백엔드, 프론트엔드를 함께 실행할 수 있는 Docker Compose 설정 추가

--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: toy_back_end
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://db:3306/memo_db
+    username: memo_user
+    password: memo_pass
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 server:
   port: 8080
