--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: toy_back_end
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://db:3306/memo_db
+    url: jdbc:mariadb://localhost:3307/memo_db
     username: memo_user
     password: memo_pass
   jpa:
