--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,21 +1,15 @@
-# 1단계: 빌드 환경 설정
-FROM eclipse-temurin:17-jdk AS build
+# 빌드 단계
+FROM node:18-alpine as build
 
 WORKDIR /app
+COPY package*.json ./
+RUN npm install
 COPY . .
+RUN npm run build
 
-# Gradle Wrapper를 사용하는 경우
-RUN ./gradlew clean build -x test --no-daemon
-
-# 2단계: 실행 환경 설정
-FROM eclipse-temurin:17-jre
-WORKDIR /app
-
-# 빌드된 jar 파일 복사
-COPY --from=build /app/build/libs/*.jar app.jar
-
-# 포트 오픈
-EXPOSE 8080
-
-# 앱 실행
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# 프로덕션 단계
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
