--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -7,9 +7,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# 프로덕션 단계
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# 최종 이미지 단계 (빌드 결과만 남김)
+FROM alpine as final
+WORKDIR /app
+COPY --from=build /app/dist /app/dist
