--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -2,19 +2,37 @@ spring:
   application:
     name: toy_back_end
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3307/memo_db
-    username: memo_user
-    password: memo_pass
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: {$SPRING_DATASOURCE_URL}
+    username: {$SPRING_DATASOURCE_USERNAME}
+    password: {$SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  web:
+    resources:
+      static-locations: "classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/app/static/"
 
 server:
   port: 8080
   servlet:
     encoding:
-      charset: utf-8
+      charset: UTF-8
       enabled: true
       force: true
+
+logging:
+  level:
+    root: INFO
+    com.memo.back: DEBUG
+    com.memo.back.infrastructure.config.LoggingFilter: DEBUG
+    org.springframework.web: DEBUG
+#    org.hibernate.SQL: DEBUG
+#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
